--- a/Logic/Logic.ClientServer/Logic.ClientServer.csproj
+++ b/Logic/Logic.ClientServer/Logic.ClientServer.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleClient.cs" />
     <Compile Include="SimpleServer.cs" />
+    <Compile Include="SocketExtensions.cs" />
     <Compile Include="UserConnectionPacket.cs" />
     <Compile Include="UserModel.cs" />
   </ItemGroup>
