--- a/Logic/Logic.Ui/Logic.Ui.csproj
+++ b/Logic/Logic.Ui/Logic.Ui.csproj
@@ -198,13 +198,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\..\.shared\LICENSE.txt">
+    <Content Include="..\..\LICENSE.txt">
       <Link>LICENSE.txt</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\..\.shared\THIRD-PARTY-LICENSES.txt">
+    <Content Include="..\..\THIRD-PARTY-LICENSES.txt">
       <Link>THIRD-PARTY-LICENSES.txt</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="FodyWeavers.xml" />
   </ItemGroup>
