--- a/Ui/Ui.Desktop/Ui.Desktop.csproj
+++ b/Ui/Ui.Desktop/Ui.Desktop.csproj
@@ -401,13 +401,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="..\..\.shared\LICENSE.txt">
+    <Resource Include="..\..\LICENSE.txt">
       <Link>LICENSE.txt</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="..\..\.shared\THIRD-PARTY-LICENSES.txt">
+    <Resource Include="..\..\THIRD-PARTY-LICENSES.txt">
       <Link>THIRD-PARTY-LICENSES.txt</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
