--- a/Ui/Ui.Desktop/Ui.Desktop.csproj
+++ b/Ui/Ui.Desktop/Ui.Desktop.csproj
@@ -374,28 +374,28 @@
     <PackageReference Include="CommonServiceLocator">
       <Version>2.0.4</Version>
     </PackageReference>
+    <PackageReference Include="ControlzEx">
+      <Version>4.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Fody">
       <Version>6.0.0</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Jot">
-      <Version>2.0.1</Version>
+      <Version>2.0.3</Version>
     </PackageReference>
     <PackageReference Include="MahApps.Metro">
-      <Version>1.6.5</Version>
+      <Version>2.0.0-alpha0490</Version>
     </PackageReference>
     <PackageReference Include="MahApps.Metro.IconPacks">
-      <Version>2.3.0</Version>
+      <Version>3.0.0-alpha0223</Version>
     </PackageReference>
     <PackageReference Include="MahApps.Metro.IconPacks.Material">
-      <Version>2.3.0</Version>
-    </PackageReference>
-    <PackageReference Include="MahApps.Metro.Resources">
-      <Version>0.6.1</Version>
+      <Version>3.0.0-alpha0223</Version>
     </PackageReference>
     <PackageReference Include="MahApps.Metro.SimpleChildWindow">
-      <Version>1.5.0</Version>
+      <Version>2.0.0-alpha0028</Version>
     </PackageReference>
     <PackageReference Include="Mono.Cecil">
       <Version>0.11.0</Version>
@@ -404,7 +404,7 @@
       <Version>5.4.1.1</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>12.0.2</Version>
+      <Version>12.0.3-beta2</Version>
     </PackageReference>
     <PackageReference Include="NuGet.CommandLine">
       <Version>5.2.0</Version>
