--- a/Ui/Ui.Desktop/Ui.Desktop.csproj
+++ b/Ui/Ui.Desktop/Ui.Desktop.csproj
@@ -73,6 +73,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="PropertyChanged.Fody" Version="3.1.3" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0-preview1.19504.10" />
   </ItemGroup>
 
   <ItemGroup>
