Started usage of SimpleSockets for client-server communication

--- a/Logic/Logic.ClientServer/Logic.ClientServer.csproj
+++ b/Logic/Logic.ClientServer/Logic.ClientServer.csproj
@@ -19,4 +19,9 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AsyncClientServer" Version="1.1.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3-beta2" />
+  </ItemGroup>
 </Project>
