--- a/Server/Server.Console/Server.Console.csproj
+++ b/Server/Server.Console/Server.Console.csproj
@@ -28,7 +28,7 @@
 
   <ItemGroup>
     <None Update="settings.ini">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
