--- a/Logic/Logic.ClientServer/Logic.ClientServer.csproj
+++ b/Logic/Logic.ClientServer/Logic.ClientServer.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="AsyncClientServer" Version="1.1.2" />
+    <PackageReference Include="BouncyCastle" Version="1.8.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3-beta2" />
   </ItemGroup>
 </Project>
