--- a/Server/Server.Console/Server.Console.csproj
+++ b/Server/Server.Console/Server.Console.csproj
@@ -18,12 +18,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AsyncClientServer" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.0-preview1.19506.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="3.1.0-preview1.19506.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.0-preview1.19506.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="3.1.0-preview1.19506.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.0-preview1.19506.1" />
+    <PackageReference Include="SimpleSockets" Version="1.2.20" />
   </ItemGroup>
 
   <ItemGroup>
