--- a/Ui/Ui.Desktop/Ui.Desktop.csproj
+++ b/Ui/Ui.Desktop/Ui.Desktop.csproj
@@ -68,14 +68,13 @@
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.0.30" />
     <PackageReference Include="Mono.Cecil" Version="0.11.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="NuGet.CommandLine" Version="5.3.0">
+    <PackageReference Include="NuGet.CommandLine" Version="5.4.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="PropertyChanged.Fody" Version="3.1.3" />
     <PackageReference Include="SimpleSockets" Version="1.2.20" />
-    <PackageReference Include="squirrel.windows" Version="1.9.0" />
-    <PackageReference Include="System.Drawing.Common" Version="4.7.0-preview1.19504.10" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -204,6 +203,9 @@
     <None Update="Resources\Sounds\roll-20-20.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Update.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
@@ -275,4 +277,18 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="'$(Configuration)' == 'Release'">
+    <GetAssemblyIdentity AssemblyFiles="$(TargetPath)">
+      <Output TaskParameter="Assemblies" ItemName="myAssemblyInfo" />
+    </GetAssemblyIdentity>
+    <PropertyGroup>
+      <PowerShellExe Condition=" '$(PowerShellExe)'=='' ">
+        %WINDIR%\System32\WindowsPowerShell\v1.0\powershell.exe
+      </PowerShellExe>
+    </PropertyGroup>
+    <Exec Command="$(PowerShellExe) -NonInteractive -executionpolicy Unrestricted -command &quot;Get-ChildItem -File -Recurse | % {$_.LastWriteTime = (Get-Date)}&quot;" />
+    <Exec Command="nuget pack PhexensWuerfelraum.nuspec -Version %(myAssemblyInfo.Version) -Properties Configuration=Release -OutputDirectory C:\Releases -BasePath $(OutDir)" />
+    <Exec Command="squirrel --releasify $(OutDir)PhexensWuerfelraum.$([System.Version]::Parse(%(myAssemblyInfo.Version)).ToString(3)).nupkg --no-msi -g $(OutDir)\Resources\installing.gif" />
+  </Target>
 </Project>
