- Fixed warnings - Removed Squirrel

--- a/Server/Server.Console/Server.Console.csproj
+++ b/Server/Server.Console/Server.Console.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="FodyWeavers.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="..\..\LICENSE.txt" Link="LICENSE.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
