New target framework: .net 5

--- a/Logic/Logic.Ui/Logic.Ui.csproj
+++ b/Logic/Logic.Ui/Logic.Ui.csproj
@@ -1,10 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <AssemblyName>PhexensWuerfelraum.Logic.Ui</AssemblyName>
     <RootNamespace>PhexensWuerfelraum.Logic.Ui</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
