--- a/Logic/Logic.ClientServer/Logic.ClientServer.csproj
+++ b/Logic/Logic.ClientServer/Logic.ClientServer.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>PhexensWuerfelraum.Logic.ClientServer</AssemblyName>
     <RootNamespace>PhexensWuerfelraum.Logic.ClientServer</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
