--- a/Server/Server.Console/Server.Console.csproj
+++ b/Server/Server.Console/Server.Console.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>PhexensWuerfelraum.Server.Console</RootNamespace>
     <StartupObject></StartupObject>
     <AssemblyName>PhexensWuerfelraum.Server.Console</AssemblyName>
