--- a/Ui/Ui.Desktop/Ui.Desktop.csproj
+++ b/Ui/Ui.Desktop/Ui.Desktop.csproj
@@ -268,4 +268,18 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="del $(TargetDir)*.dll.config" />
+  </Target>
+
+  <ItemGroup>
+    <EmbeddedResource Update="*.dll.config">
+      <CopyToOutputDirectory>False</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <Target Name="CleanDllconfig" AfterTargets="AfterPublish">
+    <Delete Files="*.dll.config" />
+  </Target>
 </Project>
