select same user for whispering after a user joins

--- a/Server/Server.Console/Server.Console.csproj
+++ b/Server/Server.Console/Server.Console.csproj
@@ -35,6 +35,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="config\settings.example.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="config\settings.ini">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
