Exclude license files from publish

--- a/Logic/Logic.ClientServer/Logic.ClientServer.csproj
+++ b/Logic/Logic.ClientServer/Logic.ClientServer.csproj
@@ -13,12 +13,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="..\..\LICENSE.txt" Link="LICENSE.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\THIRD-PARTY-LICENSES.txt" Link="THIRD-PARTY-LICENSES.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <None Include="..\..\LICENSE.txt" Link="LICENSE.txt" />
+    <None Include="..\..\THIRD-PARTY-LICENSES.txt" Link="THIRD-PARTY-LICENSES.txt" />
   </ItemGroup>
 
   <ItemGroup>
