Prevent *.pdb from generating on linux server publish

--- a/Server/Server.Console/Server.Console.csproj
+++ b/Server/Server.Console/Server.Console.csproj
@@ -8,6 +8,11 @@
     <AssemblyName>PhexensWuerfelraum.Server.Console</AssemblyName>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DebugType>None</DebugType>
+    <DebugSymbols>False</DebugSymbols>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="FodyWeavers.xml" />
   </ItemGroup>
