--- a/Logic/Logic.ClientServer/Logic.ClientServer.csproj
+++ b/Logic/Logic.ClientServer/Logic.ClientServer.csproj
@@ -9,7 +9,7 @@
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <DebugType>None</DebugType>
-    <DebugSymbols>false</DebugSymbols>
+    <DebugSymbols>False</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
